--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -10,6 +10,7 @@
 
     <!-- Bootstrap core CSS -->
     <link href="{{asset('assets/css/bootstrap.min.css')}}" rel="stylesheet">
+    <link rel="stylesheet" href="{{asset('assets/css/nav.css')}}">
 
     <style>
         .bd-placeholder-img {
@@ -43,10 +44,13 @@
                     <a class="nav-link" href="#">Accueil <span class="sr-only">(current)</span></a>
                 </li>
             </ul>
-            <form class="form-inline mt-2 mt-md-0">
-                <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
-                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Rechercher</button>
-            </form>
+            <div class="navbar-item-custom">
+                {% if app.user %}
+                    <a href="{{ path('account')}}">Mon compte</a>|<a href="{{ path('app_logout')}}">Déconnexion</a>
+                {% else %}
+                    <a href="{{ path('app_login')}}">Connexion</a>|<a href="{{ path('register')}}">inscription</a>
+                {% endif %}
+            </div>
         </div>
     </nav>
 </header>
