add products pages

--- a/public/assets/css/nav.css
+++ b/public/assets/css/nav.css
@@ -1,12 +1,42 @@
+body {
+    position:relative
+}
+
 .navbar-item-custom, .navbar-item-custom a{
 	color: #fff;
 }
 
 .footer-custom {
     text-align: center;
-    position: fixed;
+    position: absolute;
     bottom: 0;
     width: 100%;
     background-color: #dfeaff;
     padding-top: 25px;
+}
+
+.product-container {
+    margin-bottom: 120px;
+}
+
+.product-item {
+    margin-top: 50px;
+}
+.product-item h5 {
+    text-transform: uppercase;
+    font-size: 15px;
+}
+
+.product-item .product-subtitle,
+.product-item .product-price {
+    font-size: 15px;
+    margin-bottom: 10px;
+}
+
+.product-item .product-price {
+    font-weight: bold;
+}
+
+.product-page-price {
+    font-size: 20px;
 }
