--- a/templates/products/show.html.twig
+++ b/templates/products/show.html.twig
@@ -4,19 +4,25 @@
 
 {% block content %}
 
-    <div class="row">
-        <div class="col-md-5 my-auto">
-            <img src="/uploads/{{ product.illustration }}" alt="{{ product.name }}" class="img-fluid">
-        </div>
-        <div class="col-md-7">
-            <h3> {{ product.name }}</h3>
-            <p> {{ product.subtitle }}</p>
-            <span class="product-page-price">{{ (product.price /100)| number_format(2, ',', '.') }} €</span>
-            <hr>
-            <p> {{ product.description }} </p>
-            <a href="" class="btn btn-primary">Ajouter au panier</a>
-        </div>
-    </div>
+	<div class="row">
+		<div class="col-md-5 my-auto">
+			<img src="/uploads/{{ product.illustration }}" alt="{{ product.name }}" class="img-fluid">
+		</div>
+		<div class="col-md-7">
+			<h3>
+				{{ product.name }}</h3>
+			<p>
+				{{ product.subtitle }}</p>
+			<span class="product-page-price">{{ (product.price /100)| number_format(2, ',', '.') }}
+				€</span>
+			<hr>
+			<p>
+				{{ product.description }}
+			</p>
+			<a href="" class="btn btn-primary">Ajouter au panier</a>
+		</div>
+	</div>
 
 {% endblock %}
+
 
