--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -4,9 +4,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
-    <meta name="author" content="La boutique qui vend du made in France">
+    <meta name="author" content="La Broudoute, la boutique qui fait Brou, Brou !!">
     <meta name="generator" content="Jekyll v4.1.1">
-    <title>{% block title %} La boutique française {% endblock %}</title>
+    <title>{% block title %} La Broudoute {% endblock %}</title>
 
     <!-- Bootstrap core CSS -->
     <link href="{{asset('assets/css/bootstrap.min.css')}}" rel="stylesheet">
@@ -34,7 +34,7 @@
 <body>
 <header>
     <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-        <a class="navbar-brand" href="{{ path('home') }}">La boutique française</a>
+        <a class="navbar-brand" href="{{ path('home') }}">La Broudoute</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -127,7 +127,7 @@
     <!-- FOOTER -->
     <footer class="footer-custom">
         <p>
-            &copy; 2021 La Boutique française<br>
+            &copy; 2021 La Broudoute<br>
             <small> <a href="#">Privacy</a> 
             &middot; <a href="#">Terms</a></small>
         </p>
