--- a/public/assets/css/nav.css
+++ b/public/assets/css/nav.css
@@ -12,6 +12,7 @@ body {
     width: 100%;
     background-color: #dfeaff;
     padding-top: 25px;
+    margin-top: 50px;
 }
 
 .product-container {
@@ -38,4 +39,13 @@ body {
 
 .product-page-price {
     font-size: 20px;
+}
+
+
+
+/* base.html */
+
+.cart-icone {
+    width: 10px;
+    height: 10px;
 }
