--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -57,6 +57,9 @@
                     <a href="{{ path('app_login')}}">Connexion </a> | <a href="{{ path('register')}}">inscription</a>
                 {% endif %}
             </div>
+            <a href="{{ path('cart') }}">
+                <img src="{{ asset('assets/pictures/shopping-cart.png') }}" class="cart-icone" alt="mon panier">
+            </a>
         </div>
     </nav>
 </header>
