--- a/templates/cart/index.html.twig
+++ b/templates/cart/index.html.twig
@@ -6,41 +6,59 @@
 
     <h1>Mon panier</h1>
     Retrouvez l'ensemble des articles mis dans votre panier
+    
+    {% if cart|length > 0 %}
+        <table class="table mt-5">
+            <thead>
+                <tr>
+                    <th scope="col">Produits</th>
+                    <th scope="col"></th>
+                    <th scope="col">Quantité</th>
+                    <th scope="col">Prix</th>
+                    <th scope="col">Total</th>
+                </tr>
+            </thead>
+            <tbody>
+                {% set total = null %}
+                {% for product in cart %}
+                <tr>
+                    <th> 
+                        <img src="/uploads/{{ product.product.illustration }}" alt="{{ product.product.name }}" height="75px">   
+                    </th>
+                    <td> 
+                        {{ product.product.name }} <br>
+                        <small> {{ product.product.subtitle }} </small>
+                    </td>
+                    <td> 
+                        <a href="{{ path('decrease_to_cart', {'id' : product.product.id }) }}">
+                            <img src="{{ asset('assets/pictures/minus.png') }}" height="11px" alt="retirer un produit">
+                        </a>
+                        {{ product.quantity }} 
+                        <a href="{{ path('add_to_cart', {'id' : product.product.id }) }}">
+                            <img src="{{ asset('assets/pictures/plus.png') }}" height="11px" alt="ajouter un produit">
+                        </a>
+                    </td>
+                    <td> {{ (product.product.price / 100) | number_format(2, ',', '.') }} €</td>
+                    <td> {{ (product.product.price * product.quantity / 100) | number_format(2, ',', '.') }} €</td>
+                    <td>
+                        <a href="{{ path('delete_to_cart', {'id' : product.product.id }) }}">
+                            <img src="{{ asset('assets/pictures/delete.png') }}" height="18px" alt="supprimer un produit">
+                        </a>
+                    </td>
+                </tr>
 
-    <table class="table mt-5">
-        <thead>
-            <tr>
-                <th scope="col">Produits</th>
-                <th scope="col"></th>
-                <th scope="col">Quantité</th>
-                <th scope="col">Prix</th>
-                <th scope="col">Total</th>
-            </tr>
-        </thead>
-        <tbody>
-            {% set total = null %}
-            {% for product in cart %}
-            <tr>
-                <th> 
-                    <img src="/uploads/{{ product.product.illustration }}" alt="{{ product.product.name }}" height="75px">   
-                </th>
-                <td> 
-                    {{ product.product.name }} <br>
-                    <small> {{ product.product.subtitle }} </small>
-                </td>
-                <td> X {{ product.quantity }} </td>
-                <td> {{ (product.product.price / 100) | number_format(2, ',', '.') }} €</td>
-                <td> {{ (product.product.price * product.quantity / 100) | number_format(2, ',', '.') }} €</td>
-            </tr>
-            {% set total = total + (product.product.price * product.quantity) %}
-            {% endfor %}
-        </tbody>
-    </table>
-    <div class="text-right mb-5">
-        <b>nombre de produits :</b> {{ cart|length }}<br>
-        <b>Total de mon panier :</b> {{ (total / 100)|number_format(2, ',', '.') }} €<br>
-        <a href="" class="btn btn-success btn-right mt-3">Valider mon panier</a>
+                {% set total = total + (product.product.price * product.quantity) %}
+                {% endfor %}
+            </tbody>
+        </table>
+        <div class="text-right mb-5">
+            <b>nombre de produits :</b> {{ cart|length }}<br>
+            <b>Total de mon panier :</b> {{ (total / 100)|number_format(2, ',', '.') }} €<br>
+            <a href="" class="btn btn-success btn-right mt-3">Valider mon panier</a>
 
-    </div>
-
+        </div>
+    {% else %}
+        <hr>
+        <p><b>Votre panier est vide</b></p>
+    {% endif %}
 {% endblock %}
