add delivery addresses

--- a/templates/account/password.html.twig
+++ b/templates/account/password.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Modifier mon mot de passe - ma petite boutique{% endblock %}
+{% block title %}Modifier mon mot de passe - La Broudoute{% endblock %}
 
 {% block content %}
 	<h1>Modifier mon mot de passe</h1>
@@ -12,4 +12,6 @@
 
     {{ form(form)}}
     <hr>
+    <a href="{{ path('account') }}">Retour</a>
+
 {% endblock %}
