--- a/templates/register/index.html.twig
+++ b/templates/register/index.html.twig
@@ -1,11 +1,11 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello RegisterController!{% endblock %}
+{% block title %}Inscription - La Broudoute{% endblock %}
 
 {% block content %}
+    <div class="block-small">
+        <h1>Inscription</h1>
 
-	<h1>Inscription</h1>
-
-	{{ form(form)}}
-
+        {{ form(form)}}
+	</div>
 {% endblock %}
