--- a/public/assets/css/nav.css
+++ b/public/assets/css/nav.css
@@ -41,11 +41,16 @@ body {
     font-size: 20px;
 }
 
-
-
 /* base.html */
 
 .cart-icone {
-    width: 10px;
-    height: 10px;
+    width: 15px;
+    height: 15px;
+}
+
+/* login.html.twig && register/index */
+
+.block-small {
+    max-width: 600px;
+    margin: 0 auto;
 }
