--- a/templates/account/index.html.twig
+++ b/templates/account/index.html.twig
@@ -1,12 +1,14 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Mon compte - ma petite boutique{% endblock %}
+{% block title %}Mon compte - La Broudoute{% endblock %}
 
 {% block content %}
 <h1>Mon compte</h1>
 <p>Bienvenue {{ app.user.firstname }},<br> vous retrouverez toutes vos informations perosnnelles dans cet espace.</p>
 <hr>
-<a href="{{ path('account_password') }}">Modifier mon mot de passe</a>
+<a href="{{ path('account_password') }}">Modifier mon mot de passe</a><br>
+<a href="{{ path('account_address') }}">Gérer mes adresses</a>
+
 <hr>
 
 {% endblock %}
