--- a/templates/cart/index.html.twig
+++ b/templates/cart/index.html.twig
@@ -54,11 +54,12 @@
         <div class="text-right mb-5">
             <b>nombre de produits :</b> {{ cart|length }}<br>
             <b>Total de mon panier :</b> {{ (total / 100)|number_format(2, ',', '.') }} €<br>
-            <a href="" class="btn btn-success btn-right mt-3">Valider mon panier</a>
-
+           <a href="{{ path('order') }}" class="btn btn-success btn-right mt-3">Valider mon panier</a>
         </div>
     {% else %}
         <hr>
         <p><b>Votre panier est vide</b></p>
     {% endif %}
+    <a href="{{ path('products') }}" class="float-right">Retour page 'Nos produits'</a>
+
 {% endblock %}
