add annotations to pages

--- a/templates/cart/index.html.twig
+++ b/templates/cart/index.html.twig
@@ -18,8 +18,8 @@
                     <th scope="col">Total</th>
                 </tr>
             </thead>
-            <tbody>
-                {% set total = null %}
+            <tbody>     
+                {% set total = null %}   <!--Total to 0 before entering the for loop-->
                 {% for product in cart %}
                 <tr>
                     <th> 
