--- a/templates/products/index.html.twig
+++ b/templates/products/index.html.twig
@@ -7,28 +7,31 @@
 
 	<div class="row">
 		<div class="col-md-3">
-			<h3>Filtrer</h3>
+		<h3>Filtrer</h3>
+		<!-- CF:	src/classe/search.php 
+					request findWithSearch from ProductRepository
+					Form SearchType               
+		-->
+		{{ form(form) }}	
+		</div>
+		<div class="col-md-9">
+			<h3>Nos produits</h3>
 
-			{{ form(form) }}
-			</div>
-			<div class="col-md-9">
-				<h3>Nos produits</h3>
-
-				<div class="row product-container">
-					{% for product in products %}
-						<div class="col-md-4">
-							<div class="product-item text-center">
-								<a href="{{ path('product', {'slug':product.slug }) }}"><img src="/uploads/{{ product.illustration }}" alt="{{ product.name }}" class="img-fluid"></a>
-								<h5>{{ product.name }}</h5>
-								<p class="product-subtitle">{{ product.subtitle }}</p>
-								<p class="product-price">{{ (product.price / 100) | number_format(2, ',', '.') }}
-									€</p>
-								{# divided by 100 because recorded in float #}
-							</div>
+			<div class="row product-container">
+				{% for product in products %}
+					<div class="col-md-4">
+						<div class="product-item text-center">
+							<a href="{{ path('product', {'slug':product.slug }) }}"><img src="/uploads/{{ product.illustration }}" alt="{{ product.name }}" class="img-fluid"></a>
+							<h5>{{ product.name }}</h5>
+							<p class="product-subtitle">{{ product.subtitle }}</p>
+							<p class="product-price">{{ (product.price / 100) | number_format(2, ',', '.') }}
+								€</p>
+							{# divided by 100 because recorded in float #}
 						</div>
-					{% endfor %}
-				</div>
+					</div>
+				{% endfor %}
 			</div>
 		</div>
+	</div>
 
 	{% endblock %}
