notification and password hash

--- a/templates/account/password.html.twig
+++ b/templates/account/password.html.twig
@@ -8,6 +8,10 @@
     <hr>
     {% if notification %}
         <div class="alert alert-info">{{ notification }}</div>
+    {% else %}
+        {% if notificationRed %}
+            <div class="alert alert-danger">{{ notificationRed }}</div>
+        {% endif %}
     {% endif %}
 
     {{ form(form)}}
