--- a/public/assets/css/nav.css
+++ b/public/assets/css/nav.css
@@ -1,5 +1,9 @@
 body {
     position: relative;
+    background-image: url("../pictures/background2.jpg");
+    width: 100%;
+    height: 100%;
+    z-index: 1;
 }
 
 .navbar-item-custom, .navbar-item-custom a{
@@ -42,6 +46,7 @@ body {
 }
 
 /* base.html */
+
 .cart-icone {
     width: 15px;
     height: 15px;
@@ -52,11 +57,17 @@ body {
     max-width: 600px;
     margin: 0 auto;
 }
+/* products/index */
+#categories {
+    background-color: #e0e0e0d8;
+    padding: 15px;    
+}
 
 /* order/index */
-.form-check {
+/* cf orderType*/
+.order-form {
     background-color: #f4f8ff;
-    padding: 20px 65px;
+    padding: 20px 65px;    
 }
 
 .col-form-label {
