--- a/templates/products/show.html.twig
+++ b/templates/products/show.html.twig
@@ -22,6 +22,23 @@
 			<a href="{{ path('add_to_cart', {'id': product.id }) }}" class="btn btn-primary">Ajouter au panier</a>
 		</div>
 	</div>
+	<hr>
+
+	<p>Retrouvez les tendances du moment</p>
+    <div class="row">
+        {% for product in bestProducts %}
+            <div class="col-md-2">
+				<div class="product-item text-center">
+					<a href="{{ path('product', {'slug':product.slug }) }}"><img src="/uploads/{{ product.illustration }}" alt="{{ product.name }}" class="img-fluid"></a>
+					<h5>{{ product.name }}</h5>
+					<p class="product-subtitle">{{ product.subtitle }}</p>
+					<p class="product-price">{{ (product.price / 100) | number_format(2, ',', '.') }}
+						€</p>
+					{# divided by 100 because recorded in float #}
+				</div>
+            </div>
+        {% endfor %}
+    </div>
 
 {% endblock %}
 
