--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -3,64 +3,35 @@
 {% block carousel %}{% endblock %}
 
 {% block content %}
-    <!-- Three columns of text below the carousel -->
+
+    <!-- products below the carousel -->
+    <h1 class="h1-home">Les tendances du moment</h1>
     <div class="row">
-        <div class="col-lg-4">
-            <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" preserveaspectratio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: 140x140">
-                <title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text>
-            </svg>
-            <h2>Heading</h2>
-            <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
-            <p>
-                <a class="btn btn-secondary" href="#" role="button">View details &raquo;</a>
-            </p>
-        </div>
-        <!-- /.col-lg-4 -->
-        <div class="col-lg-4">
-            <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" preserveaspectratio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: 140x140">
-                <title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text>
-            </svg>
-            <h2>Heading</h2>
-            <p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Cras mattis consectetur purus sit amet fermentum. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
-            <p>
-                <a class="btn btn-secondary" href="#" role="button">View details &raquo;</a>
-            </p>
-        </div>
-        <!-- /.col-lg-4 -->
-        <div class="col-lg-4">
-            <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" preserveaspectratio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: 140x140">
-                <title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text>
-            </svg>
-            <h2>Heading</h2>
-            <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-            <p>
-                <a class="btn btn-secondary" href="#" role="button">View details &raquo;</a>
-            </p>
-        </div>
-        <!-- /.col-lg-4 -->
+        {% for product in bestProducts %}
+            <div class="col-6 col-md-3">
+                <div class="product-item text-center">
+                    <a href="{{ path('product', {'slug':product.slug }) }}"><img src="/uploads/{{ product.illustration }}" alt="{{ product.name }}" class="home-best-products img-fluid img-thumbnail"></a>
+                    <h5>{{ product.name }}</h5>
+                    <p class="product-price">{{ (product.price / 100) | number_format(2, ',', '.') }}€</p>
+                    {# divided by 100 because recorded in float #}
+                </div>
+            </div>
+        {% endfor %}
     </div>
-    <!-- /.row -->
-
-
+    <div class="home-btn-all-products">
+        <a href="/nos-produits"> <button class="arrow">Voir nos produits</button> </a>
+    </div>
     <!-- START THE FEATURETTES -->
 
-    <hr class="featurette-divider">
-
-    <div class="row featurette">
+    <div class="row first-featurette">
         <div class="col-md-7">
-            <h2 class="featurette-heading">First featurette heading.
-                <span class="text-muted">It’ll blow your mind.</span>
-            </h2>
-            <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+            <p class="lead">Des produits pas forcément utiles, enfin, peut être, des fois un peu, ca dépend du moment,<br>
+            après, est-ce vraiment différent de ce que l'on trouve ailleurs ? Et puis c'est votre argent, alors pourquoi pas se faire plaisir, on n'a qu'une vie après tout bordel	</p>
         </div>
         <div class="col-md-5">
-            <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" preserveaspectratio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: 500x500">
-                <title>Placeholder</title><rect width="100%" height="100%" fill="#eee"/><text x="50%" y="50%" fill="#aaa" dy=".3em">500x500</text>
-            </svg>
+                <img src="{{ asset('assets/pictures/labroudoute.jpg') }}" class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto img-thumbnail" width="400" height="400" focusable="false" role="img" aria-label="Placeholder: 500x500" alt="mon panier">
         </div>
     </div>
-
-    <hr class="featurette-divider">
 
     <div class="row featurette">
         <div class="col-md-7 order-md-2">
@@ -77,23 +48,4 @@
     </div>
 
     <hr class="featurette-divider">
-
-    <div class="row featurette">
-        <div class="col-md-7">
-            <h2 class="featurette-heading">And lastly, this one.
-                <span class="text-muted">Checkmate.</span>
-            </h2>
-            <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
-        </div>
-        <div class="col-md-5">
-            <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" preserveaspectratio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: 500x500">
-                <title>Placeholder</title><rect width="100%" height="100%" fill="#eee"/><text x="50%" y="50%" fill="#aaa" dy=".3em">500x500</text>
-            </svg>
-        </div>
-    </div>
-
-    <hr
-    class="featurette-divider">
-
-    <!-- /END THE FEATURETTES -->
 {% endblock %}
