--- a/templates/register/index.html.twig
+++ b/templates/register/index.html.twig
@@ -1,4 +1,4 @@
-{% extends 'base.html.twig' %}
+{% extends 'home/navBar.html.twig' %}
 
 {% block title %}Inscription - La Broudoute{% endblock %}
 
