--- a/public/assets/css/navBar.css
+++ b/public/assets/css/navBar.css
@@ -7,7 +7,6 @@ a {
 }
 
 header {
-    position: sticky;
     top: 0px;
     background-color: #f1e4d8;
     width: 100%;
@@ -184,6 +183,9 @@ header {
 }
 
 @media (max-width: 920px) {
+    header {
+        position: sticky;
+    }
 
     .logo-container {
         display: none;
