--- a/templates/account/address_form.html.twig
+++ b/templates/account/address_form.html.twig
@@ -1,4 +1,4 @@
-{% extends 'base.html.twig' %}
+{% extends 'home/navBar.html.twig' %}
 
 {% block title %}Mes adresses - La Broudoute{% endblock %}
 
