--- a/templates/account/password.html.twig
+++ b/templates/account/password.html.twig
@@ -1,4 +1,4 @@
-{% extends 'base.html.twig' %}
+{% extends 'home/navBar.html.twig' %}
 
 {% block title %}Modifier mon mot de passe - La Broudoute{% endblock %}
 
