--- a/templates/products/index.html.twig
+++ b/templates/products/index.html.twig
@@ -1,4 +1,4 @@
-{% extends 'base.html.twig' %}
+{% extends 'home/navBar.html.twig' %}
 
 {% block title %}Nos produits
 {% endblock %}
@@ -7,7 +7,7 @@
 
 	<div class="row">
 		<div class="col-md-3">
-		<h3>Filtrer</h3>
+		<h3 class="filter-title">Filtrer</h3>
 		<!-- CF:	src/classe/search.php 
 					request findWithSearch from ProductRepository
 					Form SearchType               
@@ -19,9 +19,9 @@
 
 			<div class="row product-container">
 				{% for product in products %}
-					<div class="col-md-4">
+					<div class="col-6 col-md-4">
 						<div class="product-item text-center">
-							<a href="{{ path('product', {'slug':product.slug }) }}"><img src="/uploads/{{ product.illustration }}" alt="{{ product.name }}" class="img-fluid"></a>
+							<a href="{{ path('product', {'slug':product.slug }) }}"><img src="/uploads/{{ product.illustration }}" alt="{{ product.name }}" class="products-picture img-fluid"></a>
 							<h5>{{ product.name }}</h5>
 							<p class="product-subtitle">{{ product.subtitle }}</p>
 							<p class="product-price">{{ (product.price / 100) | number_format(2, ',', '.') }}
